--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/xinyang3/express-action#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.0.2",
+    "ejs-lint": "^1.0.1",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
