--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "jslint": "^0.12.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "forecastio": "^0.2.0",
+    "zippity-do-dah": "0.0.x"
   }
 }
