--- a/package.json
+++ b/package.json
@@ -22,15 +22,22 @@
   },
   "homepage": "https://github.com/xinyang3/express-action#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.0.2",
     "ejs-lint": "^1.0.1",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "forecastio": "^0.2.0",
     "http": "^0.0.1-security",
     "jslint": "^0.12.1",
+    "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
-    "forecastio": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "zippity-do-dah": "0.0.x"
   }
 }
